fixed desc overflow

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -169,6 +169,9 @@ a {
 
 .entry .description {
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .entry .url {
